[tool.poetry]
name = "wellnessflow"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
boto3 = "^1.34.83"
envyaml = "^1.10.211231"
django-cognito-jwt = "^0.0.4"
requests-oauthlib = "^2.0.0"
django-sslserver = "^0.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
